# TEEP_2025

./: README.md
source_code/Gazebo/Flood_Detection_Segmentation/: autonomous_gps_navigation_node.py  boundary_extraction_node.py  camera_node_latency.csv  camera_node_latency_baseline.py  camera_node_latency_cpu.csv  camera_node_latency_optimized.csv  camera_node_latency_optimized.py  edge_navigation_controller.py  evaluate_segmentation.py  flood_dataset.py  flood_localization_node.py  flood_segmentation_inference.py  gps_waypoint_follower.py  grid_detection.py  latency_navigation_optimized.csv  model.py  mpc_path_planner_node.py  navigation_node_latency.csv  navigation_node_latency_baseline.py  navigation_node_latency_optimized.py  optimized.py  patch_manager_node.py  preprocess_masks.py
source_code/Gazebo/camera_latency/: camera_latency_log.csv  package.xml  setup.cfg  setup.py
source_code/Gazebo/camera_latency/camera_latency/: camera_latency_log.csv  latency_node.py  publisher_node.py
source_code/Gazebo/ftc_node/: package.xml  setup.cfg  setup.py
source_code/Gazebo/ftc_node/ftc_node/: ftc_node.py
source_code/Jetson/DeepLabv3+/: convert_masks.py  labelmap.txt  rename_dataset.py
source_code/Jetson/U-Net/: inference_log.csv  inference_log.csv:Zone.Identifier  train.py  unet_inference_log.csv  unet_inference_log.csv:Zone.Identifier  unet_latency_log.csv  unet_latency_log.csv:Zone.Identifier  unet_model.pth
source_code/mqtt_interface/: latencies.csv  latency_log.csv  mission.waypoints  mqtt_latency.py  mqtt_to_mavlink.py  mqtt_to_px4.py  upload_mission.py
(+29 files in other folders)
