<?xml version="1.0"?>
<package format="3">
  <name>camera_latency</name>
  <version>0.0.0</version>
  <description>Camera latency measurement node</description>
  <maintainer email="your_email@example.com">ayushkumar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
