<?xml version="1.0"?>
<package format="3">
  <name>ftc_node</name>
  <version>0.0.1</version>
  <description>Fault-Tolerant Control Node for UAV control safety.</description>
  <maintainer email="211230013@nitdelhi.ac.in">Ayush Kumar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

